# ILLIXR

./: .clang-format  .clang-tidy  .clang-tidy.all  .clang-tidy.format-only  .clang-tidy.minimal  .dockerignore  .gdb_history  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .proclamation.json  404.html  AUTHORS  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CONTRIBUTING.md  CONTRIBUTORS  Dockerfile  ILLIXR  ILLIXR_API  LICENSE  Makefile  Microsoft Visual Studio Debug Console.txt  README.md  adding_mediapipe  assets  build-release.sh  build_and_run.py  clean.sh  config.yaml  contributing  css  dataflow  debugging_illixr  dep_mapper.py  deps.sh  (+67 more)
dataset_plugin/: CMakeLists.txt  Makefile
dataset_plugin/include/: config.hpp  dataset_loader.hpp  ground_truth_publisher.hpp  image_publisher.hpp  imu_publisher.hpp  pose_publisher.hpp
dataset_plugin/src/: config.cpp  dataset_loader.cpp  ground_truth_plugin.cpp  image_publisher_plugin.cpp  imu_publisher_plugin.cpp  plugin.cpp  pose_publisher_plugin.cpp
depthai/: .gitignore  CMakeLists.txt  plugin.cpp
display_vk/: CMakeLists.txt  README.md  plugin.cpp
docs/: 404.html  CMakeLists.txt  Doxyfile.in  api  audio_pipeline.md  build_system.md  building_ILLIXR.md  building_illixr.md  components.md  dataflow.dot  debugging_illixr.md  default_components.md  default_plugins.md  design.md  external_dependencies.rst  external_switchboard_and_phonebook.md  getting_started.md  glossary.md  hologram.md  illixr_plugins.md  images  index.html  index.md  logging_and_metrics.md  mkdocs.yaml.in  modifying_a_plugin.md  modules.json  monado_illixr_runtime_overview.md  monado_integration_dataflow.md  offload_vio.md  openxr_apps.md  phonebook.md  qemu.md  requirements.txt  reverse_dependencies.rst  search.html  setup.html  sitemap.xml  using_cameras.md  visualizer_logger.md  (+1 more)
docs/audio_pipeline/: index.html
docs/building_ILLIXR/: index.html
docs/components/: offline_imu_cam.md  open_vins.md
docs/core/: spindle.md
docs/css/: theme.css
docs/default_plugins/: index.html
docs/design/: index.html
docs/docs/: adding_mediapipe.md  dataflow.md  debugging_illixr.md  display_backend.md  docker.md  external_dependencies.rst  external_switchboard_and_phonebook.md  getting_started.md.in  glossary.md  illixr_plugins.md  illixr_services.md  logging_and_metrics.md  modifying_a_plugin.md  mods  modules.json  modules.md  reverse_dependencies.rst  updating_tags_and_docs.md  using_cameras.md  virtualization.md  writing_your_plugin.md
docs/docs/contributing/: asking_questions.md  code_of_conduct.md  code_review.md  contributing.md  (+7 more)
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/getting_started/: index.html
docs/hologram/: index.html
docs/html/: classILLIXR_1_1phonebook-members.html  classILLIXR_1_1threadloop-members.html  logger_8hpp_source.html
docs/images/: modules.json
docs/install/: modules.json  setup.html
docs/js/: code-box-copy.js
docs/mkdocs/: CMakeLists.txt  mkdocs.yaml.in
docs/monado_illixr_runtime_overview/: index.html
docs/monado_integration_dataflow/: index.html
docs/plugin_README/: README_debugview.md  README_display_vk.md  README_fauxpose.md  README_gldemo.md  README_native_renderer.md  README_timewarp_gl.md  README_timewarp_vk.md  README_vkdemo.md  README_zed.md  monado_integration_dataflow.md
docs/search/: search_index.json
docs/visualizer_logger/: index.html
docs/writing_your_plugin/: index.html
gtsam_integrator/: CMakeLists.txt  plugin.cpp
imu_integrator/: CMakeLists.txt  Makefile  plugin.cpp
native_renderer/: CMakeLists.txt  plugin.cpp
offload_vio/device_tx/: CMakeLists.txt  plugin.cpp  video_encoder.cpp  video_encoder.h  vio_input.proto
offloaded_vio/device_rx/: CMakeLists.txt  plugin.cpp
offloaded_vio/device_tx/: CMakeLists.txt  plugin.cpp
openni/: CMakeLists.txt  Makefile  README.md  common  plugin.cpp
plugins/dataset_plugin/: CMakeLists.txt
plugins/debugview/: CMakeLists.txt  README.md  plugin.cpp  plugin.hpp
plugins/depthai/: CMakeLists.txt  Makefile  plugin.cpp  plugin.hpp
plugins/display_vk/: CMakeLists.txt  README.md  display_backend.h  glfw_extended.cpp  glfw_extended.h  plugin.cpp  plugin.hpp  wayland_drm.cpp  wayland_drm.h  x11_direct.cpp  x11_direct.h
plugins/fauxpose/: CMakeLists.txt  README_fauxpose.md  plugin.cpp  plugin.hpp
plugins/filament_gldemo/: CMakeLists.txt  IBL.cpp  IBL.h  plugin.cpp
plugins/frame_logger/: CMakeLists.txt  plugin.cpp  plugin.hpp
pose_openvins/: CMakeLists.txt  Makefile  README.md  plugin.cpp
realsense/: CMakeLists.txt  pkg-deps.txt  plugin.cpp
runner/: .gitignore  config_schema.yaml  environment-aarch64.yml  environment.yml  pyproject.toml  sqlite-leak.txt
runner/runner/: main.py  metarunner.py  runner2.py  set_cpu_freq.py  util.py
slam1/: BUILD  CMakeLists.txt  WORKSPACE  libokvis.BUILD  slam1.cc
src/: CMakeLists.txt  cxxopts.hpp  frame_logger2.hpp  illixr.hpp  main.cpp  no_op_record_logger.hpp  noop_record_logger.hpp  plugin.cpp  runtime_impl.cpp  runtime_impl.hpp  sqlite_record_logger.hpp  stdout_record_logger.hpp  switchboard.cpp  vulkan_display.cpp  vulkan_display.hpp
src/display/: display_backend.h  display_backend.hpp  glfw_extended.cpp  glfw_extended.h  glfw_extended.hpp  headless.cpp  headless.hpp  x11_direct.cpp  x11_direct.h  x11_direct.hpp
src/sqlite3pp/: sqlite3pp.hpp  sqlite3pp_interface.hpp
timewarp_vk/: CMakeLists.txt  plugin.cpp
timewarp_vk/shaders/: tw.frag
timewarp_vk/utils/: hmd.hpp
utils/: CMakeLists.txt  hmd.cpp  hmd.hpp  serializable_data.cpp  serializable_data.hpp  video_decoder.cpp  video_encoder.cpp  video_encoder.hpp  vulkan_utils.cpp  vulkan_utils.hpp
utils/hmd/: CMakeLists.txt
utils/imgui/: CMakeLists.txt  imconfig.h  imgui.h  imgui_tables.cpp
utils/video/: ada.cmake  video_decoder.cpp  video_encoder.cpp  vio.cmake
utils/vulkan/: CMakeLists.txt
vkdemo/: CMakeLists.txt  README.md  plugin.cpp
vkdemo/shaders/: demo.frag  demo.vert
zed/: CMakeLists.txt  LICENSE  Makefile  README.md
zed/include/: zed_opencv.hpp
zed/src/: main.cpp
(+9644 files in other folders)
